<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fsfsf"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"


        />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="220dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_enter"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_register"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="130dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_your_mail"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"

        />
    <EditText
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@id/tv5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/enter1"
        app:layout_constraintTop_toBottomOf="@id/tv6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/orange"
        android:onClick="onClick"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/bt1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>